[gd_scene load_steps=28 format=3 uid="uid://db0mo8hu8ojl5"]

[ext_resource type="Texture2D" uid="uid://cvd0vjgqtqs35" path="res://Art/Player/Character/SpriteSheet.png" id="1_n5mfm"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_p8w3x"]
[ext_resource type="Texture2D" uid="uid://c4mlfdbugulv8" path="res://Art/Player/Character/health_bar_decoration.png" id="5_yob87"]
[ext_resource type="Texture2D" uid="uid://d21xaiumucm6e" path="res://Art/Player/Character/health_bar.png" id="6_35cdx"]
[ext_resource type="Script" path="res://Scripts/RegenTimer.gd" id="6_b8dfp"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="7_42u38"]
[ext_resource type="Script" path="res://Scripts/GunRange.gd" id="7_nrogl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_55l77"]
atlas = ExtResource("1_n5mfm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w02kv"]
atlas = ExtResource("1_n5mfm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5cew"]
atlas = ExtResource("1_n5mfm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfid3"]
atlas = ExtResource("1_n5mfm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_66t6b"]
atlas = ExtResource("1_n5mfm")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs3dx"]
atlas = ExtResource("1_n5mfm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cntj8"]
atlas = ExtResource("1_n5mfm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yystb"]
atlas = ExtResource("1_n5mfm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aave0"]
atlas = ExtResource("1_n5mfm")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo7ym"]
atlas = ExtResource("1_n5mfm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv8d5"]
atlas = ExtResource("1_n5mfm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljk2q"]
atlas = ExtResource("1_n5mfm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qp0u"]
atlas = ExtResource("1_n5mfm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_euptd"]
atlas = ExtResource("1_n5mfm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua2ob"]
atlas = ExtResource("1_n5mfm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7tqo"]
atlas = ExtResource("1_n5mfm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhir1"]
atlas = ExtResource("1_n5mfm")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0dv4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55l77")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5cew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfid3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66t6b")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs3dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cntj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yystb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aave0")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo7ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv8d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljk2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qp0u")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euptd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua2ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7tqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhir1")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ena24"]
radius = 5.77889

[sub_resource type="CircleShape2D" id="CircleShape2D_tvccl"]
radius = 6.32941

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
platform_floor_layers = 0
script = ExtResource("1_p8w3x")

[node name="Player_SpriteAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_0dv4j")
animation = &"walk_left"

[node name="Player_Collisionshape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ena24")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(12.64, 1.52)
zoom = Vector2(3.935, 3.935)

[node name="GameTimer" type="Timer" parent="Camera2D"]
unique_name_in_owner = true
wait_time = 600.0
one_shot = true

[node name="TimerLabel" type="Label" parent="Camera2D"]
unique_name_in_owner = true
offset_left = -17.0
offset_top = -72.0
offset_right = 14.0
offset_bottom = -17.0
scale = Vector2(0.52, 0.52)
theme_override_font_sizes/font_size = 12
text = "Hallo"

[node name="HealthBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -12.485
offset_top = -14.025
offset_right = 51.515
offset_bottom = 2.975
scale = Vector2(0.38, 0.38)
step = 0.2
value = 100.0
rounded = true
texture_under = ExtResource("5_yob87")
texture_progress = ExtResource("6_35cdx")
texture_progress_offset = Vector2(14.08, 0)
script = ExtResource("7_42u38")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_tvccl")
debug_color = Color(1, 0, 0, 0.419608)

[node name="RegenTimer" type="Timer" parent="."]
unique_name_in_owner = true
script = ExtResource("6_b8dfp")

[node name="GunRange" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("7_nrogl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunRange"]

[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
